# sharder

./: .editorconfig  .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  config.js  config.js.example  config.ts.example  gateway-manager.js  gateway.js  gateway.ts  interface.ts  manager.config.js.example  package-lock.json  package.json  shard.yml  tsconfig.json
spec/: sharder_spec.cr  spec_helper.cr
src/: main.rs  sharder.cr
src/sharder/: Shard.cr  version.cr
src/sharder/connector/: amqp_connector.cr  redis_connector.cr
